# Stellarator

./: .stellarator-options  BUILD_WITH_PROFILING  NOTES.txt  README.md  RUN_WITH_PROFILING  Stellarator.cabal  TODO  TODO.md  asteroids-options  basic-options  font.txt  make_os  qbert-options  stack.yaml  swapped-joystick  trace.cpp
app/: Core.hs  Main.hs
asm/: 6502test.a65  os.config  os.s
docs/: asteroids_flashing.txt  battlezone_notes.txt  freeway_notes.txt  general_notes.txt  notes.txt
experiment/: Identify.hs  Main.hs  TIAColors.hs
roms/: 6502test.hex
scripts/: CLASSIFY_ROMS  GO_BACK  RUN  RUN_TEST  RUN_WITH_PROFILING  build_test  run_as65
shaders/: fragment.glsl  vertex.glsl
src/: ALU.hs  AcornAtom.hs  Asm.hs  Atari2600.hs  Audio.hs  Binary.hs  BitManips.hs  CPU.hs  Core.hs  DebugCmd.hs  DebugState.hs  Debugger.hs  Delays.hs  Disasm.hs  Display.hs  Emulation.hs  Events.hs  Keys.hs  Memory.hs  Metrics.hs  Stella.hs  Step.hs  TIAColors.hs  VideoOps.hs
src/Stella/: Graphics.hs  IntervalTimer.hs  SDLState.hs  Sprites.hs  TIARegisters.hs
test/: Intel.hs  Main.hs  Vanilla.hs
