name:                Stellarator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Stellarator#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

--  -fllvm -pgmlc /opt/local/bin/llc-mp-3.7 -pgmlo /opt/local/bin/opt-mp-3.7

library
  hs-source-dirs:      src
  ghc-options:         -O -Wall -fwarn-missing-signatures 
  extensions: CPP
  cpp-options: -DTRACE=0
  extensions:          
  exposed-modules:     Binary, Disasm,
                       DebugCmd, Memory, Asm, DebugState, AcornAtom, Debugger, Metrics, Step, Stella, CPU, ALU, Emulation, Display, Keys, Events
                       -- Events
  build-depends:       base
                     , GLFW-b
                     , dequeue
                     , clock
                     , bytestring
                     , vector
                     , OpenGL
                     , array
                     , bytestring
                     , proteaaudio
                     , mtl
                     , lens
                     , binary
                     , parsec
                     , haskeline
                     , containers
                     , OpenGL
                     , time
                     , serialise
  default-language:    Haskell2010

executable stellarator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O -Wall -fwarn-missing-signatures
  extensions: CPP
  cpp-options: -DTRACE=0
  build-depends:       base
                     , GLFW-b
                     , clock
                     , dequeue
                     , bytestring
                     , vector
                     , OpenGL
                     , array
                     , mtl
                     , lens
                     , binary
                     , proteaaudio
                     , cmdargs
                     , monad-loops
                     , parsec
                     , binary
                     , random
                     , haskeline
                     , containers
                     , OpenGL
                     , Stellarator
                     , serialise
  default-language:    Haskell2010
 
test-suite emu6502-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Intel, Vanilla
  build-depends:       base
                     , HUnit
                     , array
                     , mtl
                     , lens
                     , monad-loops
                     , bytestring
                     , binary
                     , parsec
                     , cmdargs
                     , haskeline
                     , Stellarator
  ghc-options:         -O
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Stellarator
